--- a/app/src/main/res/layout/delegate_kitchen_list.xml
+++ b/app/src/main/res/layout/delegate_kitchen_list.xml
@@ -48,7 +48,7 @@
                 android:background="#000"
                 android:layout_width="1dp"
                 android:layout_margin="10dp"
-                android:layout_height="90dp"/>
+                android:layout_height="80dp"/>
 
             <RelativeLayout
                 android:id="@+id/layout_kitchen_name"
@@ -60,14 +60,14 @@
                     android:id="@+id/kitchen_name_title"
                     android:textSize="13sp"
                     android:text="Kitchen Name : "
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:textColor="#000"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/kitchen_name"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="15dp"
                     android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@+id/kitchen_name_title"
                     android:text="Name"
@@ -78,34 +78,9 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/layout_dish_quantity"
-                android:layout_marginTop="5dp"
-                android:layout_below="@+id/layout_kitchen_name"
-                android:layout_toRightOf="@+id/dish_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/all_dishes"
-                    android:textSize="13sp"
-                    android:text="Total Dishes :"
-                    android:textColor="#000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:id="@+id/all_dishes_number"
-                    android:layout_toRightOf="@+id/all_dishes"
-                    android:text=" 10"
-                    android:textColor="#000"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </RelativeLayout>
-
-            <RelativeLayout
                 android:id="@+id/layout_delivery"
                 android:layout_marginTop="5dp"
-                android:layout_below="@+id/layout_dish_quantity"
+                android:layout_below="@+id/layout_kitchen_name"
                 android:layout_toRightOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -146,7 +121,7 @@
                 <TextView
                     android:id="@+id/address"
                     android:layout_toRightOf="@+id/location_title"
-                    android:text=" Khan center cantt"
+                    android:text=" "
                     android:textColor="#000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -156,7 +131,7 @@
                 android:id="@+id/kitchen_details_view"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="30dp"
                 android:layout_below="@+id/layout_location"
                 android:background="#dd9906"
                 android:layout_width="match_parent"
@@ -198,6 +173,7 @@
             <RelativeLayout
                 android:id="@+id/layout_closing_time"
                 android:layout_weight="1.0"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -225,6 +201,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginTop="5dp"
                 android:weightSum="2.0">
 
             <RelativeLayout
@@ -267,7 +244,7 @@
                     <TextView
                         android:id="@+id/contact_number"
                         android:layout_toRightOf="@+id/contact_title"
-                        android:text=" +923120676767"
+                        android:text=" "
                         android:textColor="#000"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
@@ -278,6 +255,7 @@
                 android:id="@+id/layout_working_days"
                 android:layout_marginLeft="5dp"
                 android:paddingBottom="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_below="@+id/order_finish_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
