--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -17,9 +17,9 @@
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/app_logo"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:id="@+id/kitchen_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/camera"
                     android:layout_marginTop="10dp"
                     android:layout_gravity="center_horizontal"
@@ -31,7 +31,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
-                        android:id="@+id/restaurant_name_edit_text"
+                        android:id="@+id/kitchen_name_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:background="@drawable/edit_text_background"
@@ -73,8 +73,6 @@
                         android:background="@drawable/edit_text_background"
                         android:hint="Mobile number"
                         android:paddingLeft="10sp"
-                        android:clickable="true"
-                        android:focusable="false"
                         android:paddingTop="@dimen/floating_hint_margin"
                         android:textColorHint="#000"
                         android:textColor="#000"
@@ -218,6 +216,24 @@
                     </RelativeLayout>
                 </LinearLayout>
 
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/delivery_time_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:background="@drawable/edit_text_background"
+                        android:hint="Delivery Time"
+                        android:inputType="number"
+                        android:paddingLeft="10sp"
+                        android:textColorHint="#000"
+                        android:textColor="#000"
+                        android:paddingTop="@dimen/floating_hint_margin"
+                        android:textSize="15sp" />
+                </android.support.design.widget.TextInputLayout>
+
                 <LinearLayout
                     android:id="@+id/main_spinner_layout"
                     android:layout_width="match_parent"
@@ -250,7 +266,7 @@
                         android:layout_weight="1.0"
                         android:padding="5dp">
 
-                        <io.apptik.widget.multiselectspinner.MultiSelectSpinner
+                        <com.byteshaft.homemade.utils.MultiSelectionSpinner
                             android:id="@+id/days_spinner"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
