--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/add_dish"
+        android:id="@+id/add_dish_button"
         android:icon="@mipmap/plus_button"
         android:title="@string/add_dish"
         app:showAsAction="always" />
