--- a/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
+++ b/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
@@ -47,7 +47,7 @@
                 <TextView
                     android:id="@+id/dish_name_title"
                     android:textSize="15sp"
-                    android:text="Dish Name : "
+                    android:text="@string/dish_name"
                     android:layout_marginTop="15dp"
                     android:textColor="#000"
                     android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
                     android:layout_marginTop="18dp"
                     android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@+id/dish_name_title"
-                    android:text="Name"
+                    android:text="@string/name_delegate"
                     android:textColor="#000"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
@@ -95,7 +95,7 @@
                     android:layout_below="@+id/dish_image"
                     android:textSize="15sp"
                     android:layout_marginLeft="5dp"
-                    android:text="Dish Descriptions"
+                    android:text="@string/dish_descriptions"
                     android:layout_marginBottom="2dp"
                     android:textColor="#000"
                     android:layout_width="wrap_content"
