--- a/app/src/main/res/layout/fragment_add_dish_details.xml
+++ b/app/src/main/res/layout/fragment_add_dish_details.xml
@@ -35,7 +35,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Dish name"
+                    android:hint="@string/dish_name"
                     android:paddingLeft="10sp"
                     android:textColorHint="#000"
                     android:textColor="#000"
@@ -52,7 +52,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:background="@drawable/edit_text_background"
-                            android:hint="Dish price"
+                            android:hint="@string/dish_price"
                             android:inputType="number"
                             android:paddingLeft="10sp"
                             android:paddingTop="@dimen/floating_hint_margin"
@@ -68,7 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Dish details"
+                    android:hint="@string/add_dish_details"
                     android:maxLength="120"
                     android:lines="3"
                     android:gravity="top|left"
