--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="New password"
+                    android:hint="@string/new_password"
                     android:inputType="textPassword"
                     android:textColorHint="#000"
                     android:textColor="#000"
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Verify password"
+                    android:hint="@string/verify_password"
                     android:inputType="textPassword"
                     android:paddingLeft="10sp"
                     android:textColorHint="#000"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/login_button_background"
-                android:text="UPDATE"
+                android:text="@string/update"
                 android:textColor="#000" />
 
         </LinearLayout>
