--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:textColorHint="#000"
                     android:textColor="#000"
                     android:inputType="textEmailAddress"
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/login_button_background"
-                android:text="Send"
+                android:text="@string/send"
                 android:textColor="#000" />
 
         </LinearLayout>
