--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:textColorHint="#000"
                     android:textColor="#000"
                     android:inputType="textEmailAddress"
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Email otp"
+                    android:hint="@string/email_otp"
                     android:textColorHint="#000"
                     android:textColor="#000"
                     android:paddingLeft="10sp"
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="New password"
+                    android:hint="@string/new_password"
                     android:textColorHint="#000"
                     android:textColor="#000"
                     android:inputType="textPassword"
@@ -78,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/login_button_background"
-                android:text="Reset"
+                android:text="@string/reset"
                 android:textColor="#000" />
 
         </LinearLayout>
