--- a/app/src/main/res/layout/fragment_account_activation_code.xml
+++ b/app/src/main/res/layout/fragment_account_activation_code.xml
@@ -26,7 +26,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Email"
+                    android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     android:paddingLeft="10sp"
                     android:paddingTop="@dimen/floating_hint_margin"
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:background="@drawable/edit_text_background"
-                    android:hint="Verification ode"
+                    android:hint="@string/verification_code"
                     android:inputType="number"
                     android:maxLength="6"
                     android:paddingLeft="10sp"
