--- a/app/src/main/res/layout/delegate_dish_details.xml
+++ b/app/src/main/res/layout/delegate_dish_details.xml
@@ -8,7 +8,7 @@
         android:background="@drawable/card_view_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
     <android.support.v7.widget.CardView
@@ -19,7 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/dish_image"
