--- a/app/src/main/res/layout/activity_kitchen_details.xml
+++ b/app/src/main/res/layout/activity_kitchen_details.xml
@@ -7,7 +7,7 @@
         android:id="@+id/kitchen_details_list_view"
         android:divider="@null"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:scrollbars="none">
     </ListView>
 </LinearLayout>
