--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -17,34 +17,6 @@
             android:layout_width="140dp"
             android:layout_height="140dp"
             android:layout_centerHorizontal="true"
-            android:src="@mipmap/ic_launcher"/>
-
-        <TextView
-            android:id="@+id/home"
-            android:layout_below="@+id/logo"
-            android:text="HOME"
-            android:textSize="40sp"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/made"
-            android:layout_below="@+id/home"
-            android:text="MADE"
-            android:textSize="40sp"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/food"
-            android:layout_below="@+id/made"
-            android:text="FOOD"
-            android:textSize="40sp"
-            android:textColor="#000"
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:src="@mipmap/food_logo"/>
     </RelativeLayout>
 </RelativeLayout>
