--- a/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
+++ b/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/dish_image"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@mipmap/ic_launcher"
@@ -57,6 +58,7 @@
                     android:id="@+id/dish_name"
                     android:layout_marginTop="18dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_toRightOf="@+id/dish_name_title"
                     android:text="@string/name_delegate"
                     android:textColor="#000"
@@ -95,6 +97,7 @@
                     android:layout_below="@+id/dish_image"
                     android:textSize="15sp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:text="@string/dish_descriptions"
                     android:layout_marginBottom="2dp"
                     android:textColor="#000"
@@ -111,6 +114,7 @@
                 <TextView
                     android:id="@+id/dish_description"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_marginBottom="2dp"
                     android:layout_below="@+id/description_view"
                     android:text="Typically smoked or boiled, ham hocks generally consist of much skin, tendons and ligaments."
