--- a/app/src/main/res/layout/delegate_kitchen_list.xml
+++ b/app/src/main/res/layout/delegate_kitchen_list.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/card_view_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <android.support.v7.widget.CardView
