--- a/app/src/main/res/layout/delegate_kitchen_list.xml
+++ b/app/src/main/res/layout/delegate_kitchen_list.xml
@@ -11,7 +11,7 @@
         android:background="@drawable/card_view_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
 
         <android.support.v7.widget.CardView
@@ -44,7 +44,7 @@
 
             <View
                 android:id="@+id/dish_view"
-                android:layout_toRightOf="@+id/image_layout"
+                android:layout_toLeftOf="@+id/image_layout"
                 android:background="#000"
                 android:layout_width="1dp"
                 android:layout_margin="10dp"
@@ -52,7 +52,7 @@
 
             <RelativeLayout
                 android:id="@+id/layout_kitchen_name"
-                android:layout_toRightOf="@+id/dish_view"
+                android:layout_toLeftOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -69,7 +69,7 @@
                     android:id="@+id/kitchen_name"
                     android:layout_marginTop="15dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@+id/kitchen_name_title"
+                    android:layout_toLeftOf="@+id/kitchen_name_title"
                     android:text="Name"
                     android:textSize="13sp"
                     android:textColor="#000"
@@ -81,7 +81,7 @@
                 android:id="@+id/layout_delivery"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/layout_kitchen_name"
-                android:layout_toRightOf="@+id/dish_view"
+                android:layout_toLeftOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -95,7 +95,7 @@
 
                 <TextView
                     android:id="@+id/delivery_status"
-                    android:layout_toRightOf="@+id/delivery_status_title"
+                    android:layout_toLeftOf="@+id/delivery_status_title"
                     android:text=" Yes"
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -106,7 +106,7 @@
                 android:id="@+id/layout_location"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/layout_delivery"
-                android:layout_toRightOf="@+id/dish_view"
+                android:layout_toLeftOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -120,7 +120,7 @@
 
                 <TextView
                     android:id="@+id/address"
-                    android:layout_toRightOf="@+id/location_title"
+                    android:layout_toLeftOf="@+id/location_title"
                     android:text=" "
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -163,7 +163,7 @@
 
                 <TextView
                     android:id="@+id/opening_time"
-                    android:layout_toRightOf="@+id/opening_time_title"
+                    android:layout_toLeftOf="@+id/opening_time_title"
                     android:text=" 8:00 am"
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -187,7 +187,7 @@
 
                 <TextView
                     android:id="@+id/closing_time"
-                    android:layout_toRightOf="@+id/closing_time_title"
+                    android:layout_toLeftOf="@+id/closing_time_title"
                     android:text=" 5:00 pm"
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -221,7 +221,7 @@
 
                 <TextView
                     android:id="@+id/order_time"
-                    android:layout_toRightOf="@+id/order_time_title"
+                    android:layout_toLeftOf="@+id/order_time_title"
                     android:text=" 2h"
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -243,7 +243,7 @@
 
                     <TextView
                         android:id="@+id/contact_number"
-                        android:layout_toRightOf="@+id/contact_title"
+                        android:layout_toLeftOf="@+id/contact_title"
                         android:text=" "
                         android:textColor="#000"
                         android:layout_width="match_parent"
@@ -270,7 +270,7 @@
 
                 <TextView
                     android:id="@+id/working_days"
-                    android:layout_toRightOf="@+id/working_days_title"
+                    android:layout_toLeftOf="@+id/working_days_title"
                     android:text="     Mon, Tue, Wed, Thu, Fri, Sat, Sun"
                     android:textColor="#000"
                     android:layout_width="match_parent"
