--- a/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
+++ b/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
@@ -8,7 +8,7 @@
         android:background="@drawable/card_view_background"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         app:cardCornerRadius="5dp"
@@ -31,7 +31,7 @@
                 app:civ_border_color="#F57C00" />
             <View
                 android:id="@+id/dish_view"
-                android:layout_toRightOf="@+id/dish_image"
+                android:layout_toLeftOf="@+id/dish_image"
                 android:background="#000"
                 android:layout_width="1dp"
                 android:layout_margin="15dp"
@@ -40,7 +40,7 @@
             <RelativeLayout
                 android:layout_marginTop="10dp"
                 android:id="@+id/layout_dish_name"
-                android:layout_toRightOf="@+id/dish_view"
+                android:layout_toLeftOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -57,7 +57,7 @@
                     android:id="@+id/dish_name"
                     android:layout_marginTop="18dp"
                     android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@+id/dish_name_title"
+                    android:layout_toLeftOf="@+id/dish_name_title"
                     android:text="@string/name_delegate"
                     android:textColor="#000"
                     android:layout_width="match_parent"
@@ -68,7 +68,7 @@
                 android:id="@+id/layout_dish_price"
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/layout_dish_name"
-                android:layout_toRightOf="@+id/dish_view"
+                android:layout_toLeftOf="@+id/dish_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -82,7 +82,7 @@
 
                 <TextView
                     android:id="@+id/dish_price"
-                    android:layout_toRightOf="@+id/dish_price_title"
+                    android:layout_toLeftOf="@+id/dish_price_title"
                     android:text="$50"
                     android:textColor="#000"
                     android:layout_width="match_parent"
