--- a/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
+++ b/app/src/main/res/layout/delegate_kitchen_dishes_details.xml
@@ -23,7 +23,7 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/dish_image"
                 android:layout_marginTop="15dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@mipmap/ic_launcher"
@@ -94,7 +94,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_below="@+id/dish_image"
                     android:textSize="15sp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:text="@string/dish_descriptions"
                     android:layout_marginBottom="2dp"
                     android:textColor="#000"
